zeit.cms changes
================

1.37 (unreleased)
-----------------

- Nothing changed yet.


1.36 (2009-10-02)
-----------------

- Bildergruppen haben jetzt ein Thumbnail.

- Veröffentlichen hat jetzt immer ein Ergebnis; vorher konnte es vorkommen,
  dass der Prozess keine Abbruchmeldung geschrieben hat.


1.35.1 (2009-09-29)
-------------------

- Persistente Thumbnails können wieder angelegt werden (schlug fehl mit
  Conflict / PreconditionFailed).


1.35 (2009-09-28)
-----------------

- Konflikte beim Einchecken werden erkannt und können umgangen werden.

- Löschen aus der Arbeitskopie wird jetzt gesondert behandelt, so dass
  verständlicher ist, was passiert.

1.34.2 (2009-09-22)
-------------------

- Invalidieren der Resourcen vor dem Veröffentlichen um der Locking-Errors Herr
  zu werden.


1.34.1 (2009-09-21)
-------------------

- Site-Steuerung geht zum richtigen Link (@@view.html).


1.34 (2009-09-21)
-----------------

- Site-Steuerung checkt nicht mehr aus.

- Workflow sperrt, wenn möglich, alle benötigten Resourcen vor dem
  Veröffentlichen.


1.33.3 (2009-09-16)
-------------------

- Der Workflow loggt wofür Zeit verbraucht wird. Ziel ist das Veröffentlichen
  zu beschleunigen.


1.33.2 (2009-09-14)
-------------------

- UUID-Lookup ist robuster gegen nicht vorhandene Objekte (#5734).


1.33.1 (2009-09-11)
-------------------

- Date-Last-Modified, Last-Semantic-Change, Date-First-Released und
  Date-Last-Published zur XML-Referenz wieder entfernt. Dies wird explizit in
  CPs eingebaut.


1.33 (2009-09-09)
-----------------

- Zurückziehen zieht abhängige Objekte nicht mehr mit zurück.

- Publish- und RetractEvents haben jetzt Informationen über das Objekt, das der
  Benutzer veröffentlichen/zurückziehen wollte.


1.32.1 (2009-09-06)
-------------------

- ObjectPathAttributeProperty kann jetzt ``None`` speichern, ohne "None" als
  Text zu produzieren.


1.32 (2009-09-05)
-----------------

- Site-Steuerung vor Dateiverwaltung (#6159).
