@@ -4,7 +4,8 @@ zeit.cms changes
 1.37 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ObjectAddedEvent wird jetzt nur noch gesendet, wenn ein Objekt auch wirklich
+  dem Repository hinzugefügt wird.
 
 
 1.36 (2009-10-02)
